<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.youth.banner.Banner
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:banner_auto_loop="false"
        app:banner_indicator_selected_color="@color/teal_200"
        app:banner_infinite_loop="false">


    </com.youth.banner.Banner>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="#D3D3D3"
            android:text="@string/Skip"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/btn_enter_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/enter_homepage"
            android:textSize="15sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_net_set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/network_setting"
            android:textSize="15sp"
            android:visibility="gone" />

    </LinearLayout>

</FrameLayout>